# Synapse_DeepAgent

./: .dockerignore  .env.example  .gitignore  DOCKER_COMPOSE_SETUP.md  DOCKER_SETUP.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  event.txt  event_new.txt  kind.txt  kind_new .txt  langgraph.json  main.py  output.txt  pyproject.toml  requirements.txt  start_mcp_servers.sh  test_resend_email.py  test_schedule_quick.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
Backend/api/: auth.py  database.py  main.py  migrate.py  models.py  scheduler.py  schemas.py  utils.py
Synapse_RAG/: collections.yaml
Synapse_RAG/agent/: agent.py
Synapse_RAG/embedding/: embedding.py
Synapse_RAG/tools/: tools.py
faiss/mahdi_1/: index.faiss  index.pkl
faiss/mahdi_2/: index.faiss  index.pkl
faiss/mahdi_3/: index.faiss  index.pkl
faiss/mahdi_4/: index.faiss  index.pkl
faiss/mahdi_string4/: index.faiss  index.pkl
faiss/mahdi_string5/: index.faiss  index.pkl
faiss/omar_string2/: index.faiss  index.pkl
faiss/string/: index.faiss  index.pkl
faiss/string3/: index.faiss  index.pkl
faiss/string4/: index.faiss  index.pkl
faiss/string5/: index.faiss  index.pkl
faiss/string6/: index.faiss  index.pkl
faiss/string7/: index.faiss  index.pkl
faiss/test_summary/: index.faiss  index.pkl
src/: graph.py
src/MCP/: MCP.json  MCP_local.json  mcp.py
src/MainAgent/: agent.py
src/Prompts/: main_agent_instructions.txt  prompts.py
(+80 files in other folders)
